<resources>
    <string name="app_name">RealtorApp</string>
    <string name="action_settings">Settings</string>
    <string name="search_title">Search</string>
    <string name="menu_item_addcontact">Добавить контакт</string>
    <string name="menu_item_addobject">Добавить объект</string>
    <string name="menu_item_addevent">Добавить событие</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="tab_item_objects">Объекты</string>
    <string name="tab_item_events">События</string>
    <string name="tab_item_contacts">Контакты</string>

    <string name="new_object">Новый объект</string>
    <string name="new_event">Новое событие</string>
    <string name="new_client">Новый клиент</string>

    <string name="edit_client">Редактировать клиента</string>
    <string name="edit_object">Редактировать объект</string>
    <string name="edit_event">Редактировать событие</string>

    <string name="nameobject_hint_name">Название объекта</string>
    <string name="nameobject_hint_address">Адрес</string>
    <string name="nameobject_hint_price">Цена клиента</string>
    <string name="nameobject_hint_client">Клиент</string>
    <string name="nameobject_hint_numberroom">Количество комнат</string>
    <string name="nameobject_hint_newbuild">Тип объекта</string>
    <string name="nameobject_hint_allsquare">S общая </string>
    <string name="nameobject_hint_livesquare">S жилая</string>
    <string name="nameobject_hint_kitchensquare">S кухни</string>
    <string name="nameobject_hint_floor">Этаж</string>
    <string name="nameobject_hint_allfloor">Этажность</string>
    <string name="nameobject_hint_typeplan">Планировка</string>
    <string name="nameobject_hint_bathroom">Санузел</string>
    <string name="nameobject_hint_balcony">Балкон</string>
    <string name="nameobject_hint_repairs">Ремонт</string>
    <string name="nameobject_hint_windows">Окна</string>
    <string name="nameobject_hint_viewfromwindows">Вид из окон</string>
    <string name="nameobject_hint_material">Материал</string>
    <string name="nameobject_hint_yearconstruction">Год постройки</string>
    <string name="nameobject_hint_conditiondeal">Условия продажи</string>
    <string name="nameobject_hint_ipoteka">Ипотека</string>
    <string name="nameobject_hint_clearsale">Чистая продажа</string>
    <string name="nameobject_hint_change">Обмен</string>
    <string name="nameobject_hint_pricesale">Цена продажи</string>
    <string name="nameobject_hint_addinfo">Доп. информация</string>
    <string name="nameobject_hint_location">Угловая</string>
    <string name="nameobject_hint_corner">Угловая</string>
    <string name="nameobject_hint_photo">Фото</string>

    <string name="nameclient_hint_name">Имя клиента</string>
    <string name="nameclient_hint_type">Тип клиента</string>
    <string name="nameclient_hint_phone">Телефон клиента</string>
    <string name="nameclient_hint_mail">Email клиента</string>

    <string name="nameevent_hint_object">Объект</string>
    <string name="nameevent_hint_client">Клиент</string>
    <string name="nameevent_hint_type">Тип события</string>
    <string name="nameevent_hint_name">Имя события</string>
    <string name="nameevent_hint_date">Дата</string>
    <string name="nameevent_hint_time">Время</string>
    <string name="nameevent_hint_place">Место</string>
    <string name="nameevent_hint_info">Инфо</string>
    <string name="nameevent_hint_reminder">Напомнить</string>

    <string name="findclient_hint_info">Информация о нужном объекте</string>

    <string name="menu_delete">Удалить</string>
    <string name="menu_edit">Редактировать</string>
    <string name="menu_addobject">Добавить объект</string>
    <string name="menu_addevent">Добавить событие</string>
    <string name="menu_call">Позвонить</string>

    <string name="deleteclient_dialog_title">Удалить клиента</string>
    <string name="deleteclient_dialog_message">Клиент связан с объектами и событиями</string>

    <string name="photofolder_name">/RealtorAppPhotos</string>

    <string name="secondarybuild">Вторичный рынок</string>
    <string name="newbuild">Новостройка</string>


</resources>
