<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_addevent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_addevent"
                android:layout_width="match_parent"
                android:src="@mipmap/ic_plus"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                android:background="?attr/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:clipToPadding="false"
            android:fillViewport="true">

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_addevent_objects"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="true"
                app:ms_hintColor="@color/hint"
                app:ms_hint="@string/nameevent_hint_object"
                app:ms_thickness="2dp"
                app:ms_arrowColor="@color/colorPrimaryDark"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/floating_label"
                app:ms_floatingLabelText="Объект"
                />
            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_addevent_clients"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="true"
                app:ms_hintColor="@color/hint"
                app:ms_hint="@string/nameevent_hint_client"
                app:ms_thickness="2dp"
                app:ms_arrowColor="@color/colorPrimaryDark"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/floating_label"
                app:ms_floatingLabelText="Клиент"
                />
            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_addevent_type"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="true"
                app:ms_hintColor="@color/hint"
                app:ms_hint="@string/nameevent_hint_type"
                app:ms_thickness="2dp"
                app:ms_arrowColor="@color/colorPrimaryDark"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/floating_label"
                app:ms_floatingLabelText="Тип события"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_event_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/event_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16dp"
                        android:hint="@string/nameevent_hint_name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_event_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/event_date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16dp"
                        android:hint="@string/nameevent_hint_date" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_event_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/event_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16dp"
                        android:hint="@string/nameevent_hint_time" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_event_place"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/event_place"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16dp"
                        android:hint="@string/nameevent_hint_place" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_event_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/event_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16dp"
                        android:hint="@string/nameevent_hint_info" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_reminder"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="true"
                app:ms_hintColor="@color/hint"
                app:ms_hint="@string/nameevent_hint_reminder"
                app:ms_thickness="2dp"
                app:ms_arrowColor="@color/colorPrimaryDark"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/floating_label"
                app:ms_floatingLabelText="Напомнить"
                />



        </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.drawerlayout.widget.DrawerLayout>
