<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout_addclient"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_addclient"
                android:layout_width="match_parent"
                android:src="@mipmap/ic_plus"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                android:background="?attr/colorPrimary" />
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp"
            android:paddingBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_client_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/client_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:textSize="16dp"
                        android:hint="@string/nameclient_hint_name" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <fr.ganfra.materialspinner.MaterialSpinner
                android:id="@+id/spinner_addclient"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                app:ms_multiline="true"
                app:ms_hintColor="@color/hint"
                app:ms_hint="@string/nameclient_hint_type"
                app:ms_thickness="2dp"
                app:ms_arrowColor="@color/colorPrimaryDark"
                app:ms_arrowSize="16dp"
                app:ms_alignLabels="true"
                app:ms_enableFloatingLabel="true"
                app:ms_floatingLabelColor="@color/floating_label"
                app:ms_floatingLabelText="Тип клиента"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_client_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/client_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="phone"
                        android:textSize="16dp"
                        android:hint="@string/nameclient_hint_phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_client_mail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/client_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:textSize="16dp"
                        android:hint="@string/nameclient_hint_mail" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/linearLayoutAddClient"
                android:orientation="vertical">
            </LinearLayout>


        </LinearLayout>





    </androidx.coordinatorlayout.widget.CoordinatorLayout>



</androidx.drawerlayout.widget.DrawerLayout>
